# slack.rs

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  JSONL_LOGGING_BENEFITS.md  LOGGING_OPERATIONS_GUIDE.md  README.md  README_LOGGING.md  flake.nix  openapi.json  openapi.yaml
.github/workflows/: build-and-push-api-hub.yml  build-and-push-slack.rs.yml  build-and-push-slack.rs.yml.backup-ca-approach  ci.yml  docker-build.yml
src/: app.rs  http_client.rs  lib.rs  logging.rs  main.rs  request_id.rs  server.rs
src/config/: settings.rs  state.rs
src/errors/: api_error.rs
src/extractors/: json.rs  mod.rs
src/handlers/: health_handler.rs  mod.rs  openapi_handler.rs  s3_handler.rs  slack_handler.rs
src/middleware/: mod.rs  problem_details.rs  request_tracing.rs
src/routes/: mod.rs  s3.rs  slack.rs
src/service/: mod.rs  s3_service.rs  slack_service.rs
