[package]
name = "slack"
version = "0.1.0"
edition = "2024"

# ARCとQEMU環境互換性のためのターゲット設定
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# CPU feature互換性確保 - 環境変数RUSTFLAGSを使用
# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "target-cpu=x86-64", "-C", "target-feature=-aes,-avx,-avx2"]

[dependencies]
axum = "0.8.1"
base64 = "0.22.1"
dotenvy = "0.15.7"
hyper = "1.6.0"
reqwest = {version= "0.12.12",features = ["json"]}
serde = { version = "1.0.218", features = ["derive"]}
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version="1.44.0",features = ["macros","rt-multi-thread","signal","process","io-util","time","sync","parking_lot"]}
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19" , features = ["json","env-filter"]}


[build]
rustflags = []