[package]
name = "api-hub"
version = "0.1.0"
edition = "2024"
default-run = "api-hub"
rust-version = "1.88"

# ARCとQEMU環境互換性のためのターゲット設定
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# CPU feature互換性確保 - 環境変数RUSTFLAGSを使用
# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "target-cpu=x86-64", "-C", "target-feature=-aes,-avx,-avx2"]

[dependencies]
axum = "0.8.1"
base64 = "0.22.1"
nojson = "0.3.9"
reqwest = {version= "0.12.12", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.218", features = ["derive"]}
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shiguredo_s3 = "2026.1.0-canary.0"
tokio = { version="1.44.0",features = ["macros","rt-multi-thread","signal","sync","net"]}
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19" , features = ["json","env-filter", "fmt", "ansi", "time"]}

[dev-dependencies]
proptest = "1.7.0"

[[bin]]
name = "api-hub"
path = "src/main.rs"
