[package]
name = "api-hub"
version = "0.1.0"
edition = "2024"
default-run = "api-hub"
rust-version = "1.88"

# ARCとQEMU環境互換性のためのターゲット設定
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# CPU feature互換性確保 - 環境変数RUSTFLAGSを使用
# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "target-cpu=x86-64", "-C", "target-feature=-aes,-avx,-avx2"]

[dependencies]
base64 = "0.22.1"
nojson = "0.3.9"
shiguredo_http11 = "2026.1.1"
shiguredo_s3 = "2026.1.0-canary.0"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread", "signal", "net", "io-util"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws_lc_rs", "tls12"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["json", "env-filter", "fmt"] }
rustls = { version = "0.23.37", default-features = false, features = ["std", "aws_lc_rs", "tls12"] }
webpki-roots = "1.0.6"

[dev-dependencies]
proptest = "1.7.0"

[[bin]]
name = "api-hub"
path = "src/main.rs"
